Added number format and headerbar

--- a/components/LoanSimulator/LoanSimulator.module.css
+++ b/components/LoanSimulator/LoanSimulator.module.css
@@ -5,12 +5,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    background-color: #f8f9fa;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+/* Barra fija */
+.header {
+    display: flex;
+    justify-content: space-between;
+    /* Alinea los elementos a los extremos */
+    align-items: center;
+    position: fixed;
+    /* Hace que la barra quede fija */
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    /* Fondo blanco para la barra */
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    /* Sombra para la barra */
+    z-index: 1000;
+    /* Asegura que la barra esté por encima de otros elementos */
+    width: 100%;
+    /* Asegura que la barra ocupe todo el ancho */
 }
 
 /* Contenedor superior dividido en dos mitades */
@@ -19,6 +38,8 @@
     width: 100%;
     justify-content: space-between;
     margin-bottom: 20px;
+    margin-top: 80px;
+    /* Espacio para la barra fija */
 }
 
 /* Mitades */
