add help in labels

--- a/components/LoanSimulator/LoanSimulator.module.css
+++ b/components/LoanSimulator/LoanSimulator.module.css
@@ -48,6 +48,12 @@
     padding: 10px;
 }
 
+/* Contenedor de entrada */
+.inputContainer {
+    position: relative;
+    margin-bottom: 20px;
+}
+
 /* Título */
 .title {
     text-align: center;
@@ -63,6 +69,31 @@
     font-size: 1rem;
     color: #555;
     font-weight: 500;
+    position: relative;
+}
+
+/* Tooltip */
+.tooltip {
+    visibility: hidden;
+    width: 200px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1001;
+    bottom: 125%;
+    /* Posiciona el tooltip arriba del texto */
+    left: 50%;
+    margin-left: -100px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.label:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
 }
 
 /* Entradas */
