--- a/components/ResultsTable/ResultsTable.module.css
+++ b/components/ResultsTable/ResultsTable.module.css
@@ -34,6 +34,35 @@
     text-align: right;
 }
 
+.pagination {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+    list-style: none;
+}
+
+.pagination li {
+    margin: 0 5px;
+}
+
+.pagination li a {
+    padding: 8px 16px;
+    border: 1px solid #ddd;
+    color: #007bff;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.pagination li a:hover {
+    background-color: #ddd;
+}
+
+.pagination li.active a {
+    background-color: #007bff;
+    color: white;
+    border: 1px solid #007bff;
+}
+
 @media (max-width: 600px) {
 
     .table th,
