--- a/components/TopBar/TopBar.module.css
+++ b/components/TopBar/TopBar.module.css
@@ -2,7 +2,17 @@
     background-color: #0070f3;
     /* Color diferenciado */
     color: white;
-    padding: 10px 0;
-    text-align: center;
+    padding: 10px 20px;
+    text-align: right;
+    /* Alinear el texto a la derecha */
     font-size: 16px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    /* Asegúrate de que esté por encima de otros elementos */
+}
+
+.text {
+    margin: 0;
 }
